--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
 @media (-webkit-device-pixel-ratio: 1.1) {
   * {
     font-size: 90%;
-    -moz-transform: scale(3); 
+    -moz-transform: scale(3);
     -moz-transform-origin: 0 0;
   }
 }
@@ -13,13 +13,13 @@
 @media (-webkit-device-pixel-ratio: 1.25) {
   * {
     font-size: 85%;
-    -moz-transform: scale(3); 
+    -moz-transform: scale(3);
     -moz-transform-origin: 0 0;
   }
 }
 
-@font-face {
-  font-family: sans-serif;
+html {
+  scroll-behavior: smooth;
 }
 
 .Toastify__toast {
